# joepass

./: .:joepass:menuHotkeys.txt  .:joepass:sys:jpLanguage.txt  .:joepass:sys:logfile.txt  .:joepass:sys:watchfileMac.txt  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.h.in~  config.status  configure  gmon.out  menuHotkeys.txt
J2/: Makefile
archive/: configure.ac  gmon.out
cdew/: cdewMenu.cpp
changes/: readme.c  todo.rtf
dialog/: dialog.cpp
headers/: graphics.h
helper/source/: main.c
openGLversion/: animationWin.cpp  main.cpp
rc/: app.rc
refactoring/: juggler.h
runaround/: listWindow.cpp
system/: fileaccess.cpp  fileaccess.h  movie.cpp  myutil.cpp
system/win/: winPlaySound.cpp
tools/: applicationFolders.cpp  openglmenu.cpp
universal/: jpPrefs.cpp  parseSiteswap.cpp  preprocess.cpp  siteswap.cpp
